--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
     "bootstrap": "^5.3.8"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^3.1.2",
     "vite": "^7.2.4"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vercel --prod"
-  }
+    "deploy": "vercel --prod",
+    "start": "eleventy --serve"
+  },
+  "name": "src",
+  "version": "1.0.0",
+  "description": "",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trantrungtien-git/Sadaka.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/trantrungtien-git/Sadaka/issues"
+  },
+  "homepage": "https://github.com/trantrungtien-git/Sadaka#readme"
 }
