--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "bootstrap": "^5.3.8"
+    "bootstrap": "^5.3.8",
+    "marked": "^17.0.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
