CHORE: Try config.yml option1

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,10 +2,6 @@ backend:
   name: github
   repo: trantrungtien-git/Sadaka
   branch: master
-  base_url: https://sadakahr.vercel.app
-  auth_endpoint: api/auth
-
-publish_mode: editorial_workflow
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
@@ -15,17 +11,9 @@ collections:
     label: "Bài viết"
     folder: "content/posts"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     format: frontmatter
     extension: md
     fields:
       - { label: "Tiêu đề", name: "title", widget: "string" }
-      - { label: "Ngày", name: "date", widget: "datetime", default: "" }
-      - {
-          label: "Ảnh đại diện",
-          name: "thumbnail",
-          widget: "image",
-          required: false,
-        }
-      - { label: "Tóm tắt", name: "summary", widget: "text", required: false }
       - { label: "Nội dung", name: "body", widget: "markdown" }
