--- a/.github/workflows/build-posts.yml
+++ b/.github/workflows/build-posts.yml
@@ -7,6 +7,9 @@ on:
       - ".github/workflows/build-posts.yml"
   workflow_dispatch: {}
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,6 +17,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -38,5 +43,5 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "chore: build posts to html (auto)"
-            git push
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
           fi
