--- a/admin/config.yml
+++ b/admin/config.yml
@@ -8,20 +8,12 @@ public_folder: "/images/uploads"
 
 collections:
   - name: "posts"
-    label: "Bài viết / Tin tức"
+    label: "Bài viết"
     folder: "content/posts"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     format: frontmatter
     extension: md
     fields:
       - { label: "Tiêu đề", name: "title", widget: "string" }
-      - { label: "Ngày", name: "date", widget: "datetime" }
-      - {
-          label: "Ảnh đại diện",
-          name: "thumbnail",
-          widget: "image",
-          required: false,
-        }
-      - { label: "Tóm tắt", name: "summary", widget: "text" }
       - { label: "Nội dung", name: "body", widget: "markdown" }
