FEAT: Rebuild blog detail page, make it better more than before

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^17.1.6",
     "bootstrap": "^5.3.8",
     "marked": "^17.0.1",
     "slugify": "^1.6.6"
